[package]
name = "libmelda-tools"
authors = ["Amos Brocco <amos.brocco@supsi.ch>"]
edition = "2021"
version = "0.1.0"
license = "GPL-3.0"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
url = "2.2.2"
serde_json = "1.0"
melda = { git = "https://github.com/slashdotted/libmelda.git" }
