[package]
name = "libmelda-tools"
authors = ["Amos Brocco <amos.brocco@supsi.ch>"]
edition = "2021"
version = "0.1.2"
license = "GPL-3.0"
description = "Command line utilities for Melda, a Delta-State JSON CRDT"
homepage = "https://github.com/slashdotted/libmelda-tools"
repository = "https://github.com/slashdotted/libmelda-tools"


[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
url = "2.2.2"
serde_json = "1.0"
melda = "0.1.13"
