[package]
name = "libmelda-tools"
authors = ["Amos Brocco <amos.brocco@supsi.ch>"]
edition = "2021"
version = "0.2.0"
license = "GPL-3.0"
description = "Command line utilities for Melda, a Delta-State JSON CRDT"
homepage = "https://github.com/slashdotted/libmelda-tools"
repository = "https://github.com/slashdotted/libmelda-tools"


[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
serde_json = "1.0"
melda = { git = "https://github.com/slashdotted/libmelda.git", branch = "staging_overlay" }
